@startuml DatabaseSchema
'entities
entity TEMPERATURE as temp {
  * temp_id : INTERGER <<generated>>
  --
  * degrees : DECIMAL(5,2)
  * measure_time : TIMESTAMP
  * measurement_session_id : INTERGER
}

entity WIND as wind {
  * wind_id : INTERGER <<generated>>
  --
  * direction : DECIMAL(5,2)
  * speed : DECIMAL(5,2)
  * measure_time : TIMESTAMP
  * measurement_session_id : INTERGER
}

entity IMAGE as img{
  * img_id : INTERGER <<generated>>
  --
  * image : VARCHAR(256)
  * measure_time : TIMESTAMP
  * measurement_session_id : INTERGER
}
entity SOLAR_CELL as solar {
  * solar_id : INTEGER <<generated>>
  --
  * current : FLOAT
  * voltage : FLOAT
  * measure_time : TIMESTAMP
  * measurement_session_id : INTERGER
}

entity BATTERY as battery {
  * battery_id : INTERGER <<generated>>
  --
  * current : FLOAT
  * voltage : FLOAT
  * temperature : FLOAT
  * measure_time : TIMESTAMP
  * measurement_session_id : INTERGER
}

entity MEASUREMENT_SESSION as session {
  * session_id : INTERGER <<generated>>
  --
  * datavolume : INTEGER
  * created : TIMESTAMP (CURRENT_TIMESTAMP)
}


entity CONFIGURATION as conf {
  * conf_id INTERGER <<generated>>
  --
  * measurement_intervall INTEGER
  * res_hight INTEGER
  * res_width INTEGER
}

entity CONFIG_SESSION as conf_session {
  * conf_session_id INTERGER <<generated>>
  --
  * creator VARCHAR(256)
  * time TIMESTAMP
  * applied BOOLEAN
}

entity ADMIN as admin {
  * admin_id INTERGER <<generated>>
  --
  * username VARCHAR(256) (unique)
  * password VARCHAR(256)
}

'relationships
"MEASUREMENT_SESSION" "1"<--"*" "IMAGE"
"MEASUREMENT_SESSION" "1"<--"*" "WIND"
"MEASUREMENT_SESSION" "1"<--"*" "TEMPERATURE"
"BATTERY" "*"-->"1" "MEASUREMENT_SESSION"
"SOLAR_CELL" "*"-->"1" "MEASUREMENT_SESSION"
"CONFIGURATION" "1" -- "1" "CONFIG_SESSION"
"ADMIN" "1" <-- "*" "CONFIG_SESSION"

@enduml